# LibraryLink

./: .gitignore  LinkCache.cfg  build.gradle
benchmarks/z3cpp/: CMakeLists.txt  benchmark.cpp  benchmark.h  main.c
benchmarks/z3javajni/: pom.xml  z3_install.sh
benchmarks/z3javajni/src/main/java/ru/spbstu/kspt/librarylink/: JavaExample.java  Z3JavaJNIBenchmark.java  Z3JavaJNIBenchmarkState.java
cpp-receiver/: CMakeLists.txt  curl.cpp  exchange.pb.cc  exchange.pb.h  handlers.h  helpers.cpp  helpers.h  main.cpp  z3.cpp
curl_receiver/: CMakeLists.txt  main.cpp
dataexchange-common/: exchange.proto
generator/: build.gradle
generator/src/jmh/kotlin/: Benchmark.kt
generator/src/main/kotlin/ru/spbstu/kspt/librarylink/: LogReader.kt
generator/src/main/resources/generator/: SupportedLanguages.txt  cpp.stg  java.stg  kotlin.stg
generator/src/test/kotlin/: Z3Example.kt  Z3Kotlin.kt
generator/src/test/kotlin/ru/spbstu/kspt/librarylink/: Z3Example.kt
golang-receiver/: main.go
golang-receiver/exchange/: exchange.pb.go
golang-receiver/receiver/: main.go
golang_receiver/: main.go
java-wrapper-examples/src/main/java/: RequestsJava.java
javascript-wrapper/: exchange.proto  package.json  sender.html  sender.js  webpack.config.js
kotlin-dataexchange/: build.gradle
kotlin-dataexchange/src/main/kotlin/ru/spbstu/kspt/librarylink/: ProcessDataExchange.kt  Requests.kt  WebSocketFraming.kt
kotlin-dataexchange/src/main/proto/: exchange.proto
kotlin-wrapper-examples/: build.gradle
kotlin-wrapper-examples/src/jmh/kotlin/benchmark/: Bytes.kt  StatusCodeBenchmark.kt
kotlin-wrapper-examples/src/test/kotlin/: CurlMain.kt
models/stdlib/: C.lsl  C_arrays.lsl  Kotlin.lsl
python-receiver/: exchange_pb2.py  main.py
src/jmh/kotlin/benchmark/: Bytes.kt  StatusCodeBenchmark.kt
src/main/java/: OkHttpReceiver.java  RequestsJava.java
src/main/kotlin/: Curl.kt  CurlMain.kt  JenniferTest.kt  LogReader.kt  Main.kt  ProcessDataExchange.kt  Requests.kt
src/main/kotlin/generator/: Generator.kt  GeneratorST.kt
src/main/kotlin/ru/spbstu/kspt/librarylink/: Jennifer.kt  ProcessDataExchange.kt  Requests.kt  SocketServerWrapper.kt  WebSocketFraming.kt
src/main/proto/: exchange.proto
src/main/python/: main.py
src/main/resources/: Go.lsl  Kotlin.lsl  Python.lsl  Requests.lsl  logback.xml
src/main/resources/generator/: java.stg  kotlin.stg
src/test/kotlin/: RequestsTest.kt  RequestsWrapperTest.kt  SocketServerTest.kt
(+4 files in other folders)
