cmake_minimum_required(VERSION 3.12)
project(LibraryLinkReceiver)

set(CMAKE_CXX_STANDARD 17)
find_package(CURL REQUIRED)
find_package(FMT REQUIRED)
find_package(Threads REQUIRED)
find_package(Protobuf REQUIRED)
find_package(Z3 REQUIRED CONFIG)

add_executable(CurlReceiver main.cpp exchange.pb.cc curl.cpp)
target_link_libraries(CurlReceiver ${Protobuf_LIBRARIES})
target_link_libraries(CurlReceiver ${CURL_LIBRARIES})
target_link_libraries(CurlReceiver fmt::fmt)
target_link_libraries(CurlReceiver Threads::Threads)

add_executable(Z3Receiver main.cpp exchange.pb.cc z3.cpp)
target_link_libraries(Z3Receiver ${Protobuf_LIBRARIES})
target_link_libraries(Z3Receiver ${Z3_LIBRARIES})
target_link_libraries(Z3Receiver fmt::fmt)
target_link_libraries(Z3Receiver Threads::Threads)